--- a/templates/admin/manage_users.html
+++ b/templates/admin/manage_users.html
@@ -58,10 +58,10 @@
                                 <td>{{ user.get('join_date', 'N/A') }}</td>
                                 <td>
                                     <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#editUserModal{{ user.id }}">
-                                        <i class="fas fa-edit"></i>
+                                        <i class="fas fa-edit text-black"></i>
                                     </button>
                                     <button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteUserModal{{ user.id }}">
-                                        <i class="fas fa-trash"></i>
+                                        <i class="fas fa-trash text-black"></i>
                                     </button>
                                 </td>
                             </tr>
