--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   <a href="#projects">Gallery</a>
   <!-- Change the href to go to emonitor.html -->
   <a id="projectTrackingBtn" href="E-monitor.html">E-Monitor</a>
-  <a href="Cost-estimate.html">Cost Estimate</a>
+  <a href="/cost-estimate">Cost Estimate</a>
   <a href="#contact">Contact</a>
 </nav>
 
@@ -365,7 +365,7 @@
         <a class="btn" href="#projects">Gallery</a>
         <!-- Change the href to go to emonitor.html -->
         <a class="btn" id="projectTrackingBtn" href="E-monitor.html">E-Monitor</a>
-        <a class="btn" href="Cost-estimate.html">Cost Estimate</a>
+        <a class="btn" href="/cost-estimate">Cost Estimate</a>
         <a class="btn" href="#contact">Contact</a>
       </div>
 
