--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
   <a href="#services">Services</a>
   <a href="#projects">Gallery</a>
   <!-- Change the href to go to emonitor.html -->
-  <a id="projectTrackingBtn" href="E-monitor.html">E-Monitor</a>
+  <!-- <a id="projectTrackingBtn" href="E-monitor.html">E-Monitor</a> -->
   <a href="/cost-estimate">Cost Estimate</a>
   <a href="#contact">Contact</a>
 </nav>
@@ -364,7 +364,7 @@
         <a class="btn" href="#services">Services</a>
         <a class="btn" href="#projects">Gallery</a>
         <!-- Change the href to go to emonitor.html -->
-        <a class="btn" id="projectTrackingBtn" href="E-monitor.html">E-Monitor</a>
+        <!-- <a class="btn" id="projectTrackingBtn" href="E-monitor.html">E-Monitor</a> -->
         <a class="btn" href="/cost-estimate">Cost Estimate</a>
         <a class="btn" href="#contact">Contact</a>
       </div>
